# packages/courses-backend/public/swagger.json
@@ -159,7 +159,11 @@
             }
           }
         },
-        "security": [],
+        "security": [
+          {
+            "jwt": []
+          }
+        ],
         "parameters": []
       },
       "post": {
